<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Stroynaya Alt (Стройная Альт)</string>
    <string name="nav_library">The Great Library</string>
    <string name="nav_camera">Royal Camera</string>
    <string name="nav_albums">Ancient Vaults</string>
    <string name="fullscreen">Full Realm</string>
    <string name="splash_credit">\"Визуализируй своё предкартиние эстетично. Любая человеческая фигура любви, принимающая падение и взлёт.\"</string>
    <string name="splash_author">- A friendly kid of this inspirational app :)</string>
    <string name="nav_previous">Previous Soul</string>
    <string name="nav_next">Next Soul</string>
    <string name="media_index_format">%1$d of %2$d</string>
    <string name="delete_confirmation_title">Banish from Realm?</string>
    <string name="delete_confirmation_message">Are you sure you want to permanently banish this item from your library?</string>
    <string name="action_delete">Banish</string>
    <string name="action_cancel">Spare</string>
    <string name="action_quick_import">Quick Summon</string>
    <string name="action_combine">Forge Tapestry</string>
    <string name="files_selected_count">%1$d souls selected</string>
    <string name="action_edit_image">Enchant Image</string>
    <string name="brightness">Luminescence</string>
    <string name="rotate">Twist</string>
    <string name="crop">Cut</string>
    <string name="save_changes">Seal Enchantment</string>
    <string name="image_editor">Arcane Editor</string>

    <!-- Album Strings -->
    <string name="edit_album">Edit Album</string>
    <string name="btn_edit">Edit</string>
    <string name="btn_filter">Filter</string>
    <string name="btn_zip">Zip</string>
    <string name="btn_add">Add</string>
    <string name="btn_del">Del</string>
    <string name="add_count_format">Add (%1$d)</string>
    <string name="item_count_format">(%1$d)</string>

    <!-- Selection Mode -->
    <string name="selected_count">Selected: %1$d</string>
    <string name="select_all">Select All</string>
    <string name="deselect_all">Deselect All</string>
    <string name="move_to_album">Move to Album</string>
    <string name="export_images">Export</string>
    <string name="cancel_selection">Cancel</string>
    <string name="no_album">No Album</string>

    <!-- Export -->
    <string name="export_format_title">Export Format</string>
    <string name="export_png">PNG (lossless)</string>
    <string name="export_jpg">JPG (lossy)</string>
    <string name="export_quality">Quality:</string>
    <string name="export_image">Export Image</string>
    <string name="exporting">Exporting…</string>
    <string name="export_success">Exported successfully!</string>
    <string name="export_failed">Export failed</string>

    <!-- Move -->
    <string name="move_to">Move to Album</string>
    <string name="move_success">Moved %1$d items</string>
    <string name="move_failed">Move failed</string>

    <!-- Delete selected -->
    <string name="delete_selected_title">Delete Items</string>
    <string name="delete_selected_message">Are you sure you want to delete %1$d items from the library?</string>
    <string name="delete_selected_success">Deleted %1$d items</string>
</resources>
